# qaul.net

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
GUI/www/: index.html  stream.html
android/app/: CMakeLists.txt  build.gradle
android/app/src/legacy/java/net/qaul/nativelib/: LibQaul.java
android/app/src/legacy/res/raw/: iwconfig  olsrd  olsrd_dyn_gw_so_0_5  olsrd_qaul_so_0_1  socat  tether  wificonfig
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/net/qaul/nativelib/: CommonLibQaul.java  CommonLibQaulConnector.java  LibQaulConnector.java  LibQaulUtils.java
android/app/src/main/java/net/qaul/qaul/: QaulApplication.java
android/app/src/main/jni/: net_qaul_qaul_NativeQaul.c
android/app/src/main/jni/edify/: CMakeLists.txt
android/app/src/main/jni/hardware_legacy/: CMakeLists.txt
android/app/src/main/jni/tether/: CMakeLists.txt
android/app/src/main/jni/wificonfig/: CMakeLists.txt
android/app/src/minimal/java/net/qaul/nativelib/: LibQaul.java
android/app/src/nativeui/assets/: install
android/app/src/nativeui/res/: raw
android/app/src/noroot/java/net/qaul/nativelib/: LibQaul.java
android/app/src/noroot/java/net/qaul/qaul/: QaulApplication.java
contrib/lede/: feeds.conf
contrib/lede/qaul/: Makefile
doc/: Android.md  Build-Options.md  Linux.md
src/client/osx/: CMakeLists.txt
src/client/qt5/: CMakeLists.txt
src/libqaul/: CMakeLists.txt  qaullib.c  qaullib_crypto.c  qaullib_webserver.c
src/libqaulutils/: CMakeLists.txt  config.h.in
src/libqaulutils/include/qaul/utils/: logging.h  tests.h
src/libqaulutils/src/: CMakeLists.txt  logging.c
src/libqaulutils/tests/: CMakeLists.txt  inc_leveltest.c  logging_leveltest.c  logging_maxtest_error.c  logging_maxtest_info.c  logging_maxtest_warning.c  logging_test_off.c
src/qaulhelper/: CMakeLists.txt  qaulhelper.c  qaulhelper.h
